# OasisNvr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.test-streams.yml  docker-compose.yml
frontend/: app.js  index.html  login.html  style.css
src/: api.rs  camera.rs  config.rs  dash.rs  error.rs  hls.rs  ingestion.rs  lib.rs  main.rs  manager.rs  playback.rs
src/storage/: chunk_pool.rs  global_writer.rs  index.rs  mod.rs
test-streams/: av1-cam.Dockerfile  av1_rtsp_server.py
tests/: storage_test.rs
